--- a/example-process-runtime-bundle-service/build.properties
+++ b/example-process-runtime-bundle-service/build.properties
@@ -1,3 +1,3 @@
-DOCKER_IMAGE_NAME=example-process-runtime-bundle-service
+DOCKER_IMAGE_NAME=${DOCKER_IMAGE_NAME:-$(basename $PWD)}
 DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG:-latest}
 DOCKER_IMAGE_REPOSITORY=${DOCKER_IMAGE_REPOSITORY:-alfresco/${DOCKER_IMAGE_NAME}}
