AAE-1499 apply variables changes for m6

--- a/example-dmn-runtime-service/Dockerfile
+++ b/example-dmn-runtime-service/Dockerfile
@@ -1,5 +1,3 @@
-FROM quay.io/alfresco/alfresco-dmn-runtime-service:7.1.0.M5
+FROM quay.io/alfresco/alfresco-dmn-runtime-service:develop
 
 COPY project/decision-tables /maven/decision-tables
-COPY project/project.json /maven/project.json
-
