--- a/example-process-runtime-bundle-service/Dockerfile
+++ b/example-process-runtime-bundle-service/Dockerfile
@@ -1,3 +1,4 @@
-FROM quay.io/alfresco/alfresco-process-runtime-bundle-service:7.1.0.M5
+FROM quay.io/alfresco/alfresco-process-runtime-bundle-service:develop
 
 COPY processes /maven/processes
+COPY project/project.json /maven/project.json
