--- a/example-dmn-runtime-service/Dockerfile
+++ b/example-dmn-runtime-service/Dockerfile
@@ -1,3 +1,3 @@
-FROM quay.io/alfresco/alfresco-dmn-runtime-service:develop
+FROM quay.io/alfresco/alfresco-dmn-runtime-service:7.1.0.M6
 
 COPY project/decision-tables /maven/decision-tables
