--- a/example-form-service/Dockerfile
+++ b/example-form-service/Dockerfile
@@ -1,3 +1,3 @@
-FROM quay.io/alfresco/alfresco-form-service:develop
+FROM quay.io/alfresco/alfresco-form-service:7.1.0.M6
 
 COPY project/forms /maven/forms
