--- a/example-process-runtime-bundle-service/Dockerfile
+++ b/example-process-runtime-bundle-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/alfresco/alfresco-process-runtime-bundle-service:develop
+FROM quay.io/alfresco/alfresco-process-runtime-bundle-service:7.1.0.M6
 
 COPY processes /maven/processes
 COPY project/project.json /maven/project.json
