--- a/example-script-runtime-service/Dockerfile
+++ b/example-script-runtime-service/Dockerfile
@@ -1,3 +1,3 @@
-FROM quay.io/alfresco/alfresco-script-app-runtime:develop
+FROM quay.io/alfresco/alfresco-script-app-runtime:7.1.0.M6
 
 COPY project/scripts /maven/scripts
