--- a/example-application-project/build.properties
+++ b/example-application-project/build.properties
@@ -1,6 +1,6 @@
 DOCKER_IMAGE_NAME=${DOCKER_IMAGE_NAME:-$(basename $PWD)}
 DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG:-latest}
-DOCKER_IMAGE_REPOSITORY=${DOCKER_IMAGE_REPOSITORY:-alfresco/${DOCKER_IMAGE_NAME}}
+DOCKER_IMAGE_REPOSITORY=${DOCKER_IMAGE_REPOSITORY:-quay.io/alfresco/${DOCKER_IMAGE_NAME}}
 CLASSPATH_DIRECTORY_NAME=${CLASSPATH_DIRECTORY_NAME:-/home/alfresco/.activiti/project-release-volume}
 VERSION=${VERSION:-1}
 DOCKER_REGISTRY=${DOCKER_REGISTRY:-quay.io}
