Add another message to test github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,3 +11,6 @@ jobs:
     steps:
       - name: Print Hello world
         run: echo Hello World!
+
+      - name: Print Branch and Repo name
+        run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
