--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - "dev-rkumar-AAE-16008-Stop-building-example-application-project-on-every-run-of-helm-tests"
 
+env:
+  IMAGE_NAME: example-application-project
+
+
 jobs:
   empty-job:
     runs-on: ubuntu-latest
@@ -14,3 +18,49 @@ jobs:
 
       - name: Print Branch and Repo name
         run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+  
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3 
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          version: v0.11.0
+          # apply fix from https://github.com/moby/buildkit/issues/3969
+          driver-opts: |
+            image=moby/buildkit:v0.11.6
+            network=host
+
+      - name: Login to docker.io
+        uses: docker/login-action@v2
+        with:
+          # username: ${{ secrets.docker-username }}
+          username: rahulbhl22
+          # password: ${{ secrets.docker-password }}
+          password: dckr_pat_jSK6EnRfBi4eQRRUEZgN6nsH7UI
+
+
+      - name: Build image ${{ env.IMAGE_NAME }}
+        uses: docker/build-push-action@v4
+        with:
+          context: ./example-application-project
+          # tags: ghcr.io/alfresco/${{ env.IMAGE_NAME }}
+          tags: rahulbhl22/test:latest
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
+
+      # - name: Login to ghcr.io
+      #   # if: env.PUSH_IMAGE == 'true'
+      #   uses: docker/login-action@v2
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ inputs.ghcr-username }}
+      #     password: ${{ inputs.ghcr-token }}
