--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,11 @@ jobs:
   
   docker:
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      packages: write
+      security-events: write
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3 
